                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 09-10-2005 fixed: dvds wouldn't play.
 - 09-10-2005 changed: some layout stuff regarding video mode override.
 - 09-10-2005 fixed: "bad authorization" message from audioscrobbler on every songsubmission (timed out session).
 - 09-10-2005 fixed: bugs with video mode override.
 - 09-10-2005 fixed: charset converter may waste a byte here and there when converting
 - 09-10-2005 updated: German language file (Thnx to deezle)
 - 09-10-2005 updated: Hungarian language file (Thnx to tcsizmadia)
 - 09-10-2005 updated: Norwegian language file (Thnx to vnm)
 - 09-10-2005 updated: Finnish language file (Thnx to jutski)
 - 09-10-2005 updated: Korean language file (Thnx to AkoXko)
 - 09-10-2005 added: Nav view, recently played albums (musicdatabase will be updated to version 1.3)
 - 09-10-2005 changed: Nav view, the empty database message is only displayed when there are no scanned items
 - 09-10-2005 changed: added databaseviews for albums and songs to the musicdatabase
 - 09-10-2005 changed: minor speedup of nav view database queries
 - 09-10-2005 updated: sqlite to version 3.2.7
 - 09-10-2005 added: video mode override in my programs.
 - 08-10-2005 fixed: dvdplayer would be associated with any files on udf discs.
 - 08-10-2005 added: rename xbe in my programs.
 - 08-10-2005 added: Playlists to My Music Library, also directly accessible via XBMC.ActivateWindow(MyMusicLibrary,Playlists)
 - 08-10-2005 fixed: some navigation problems with My Music Library sometimes returning the full album listing for recent and top100 albums
 - 08-10-2005 fixed: the "All" items are removed from the object count in My Music Library